Update notification email for scan

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ matrix:
       project:
         name: open-quantum-safe/liboqs 
         descriptiona: C library for quantum-resistant cryptographic algorithms
-      notification_email: shravan.mishra@gmail.com
+      notification_email: coverity-results@openquantumsafe.org
       build_command_prepend: "autoreconf -i;./configure;make clean"
       build_command: "make -j4"
       branch_pattern: coverity_scan
