--- a/.travis.yml
+++ b/.travis.yml
@@ -76,6 +76,7 @@ matrix:
     - USE_PICNIC=1
     - M4RI_DIR=/usr/local/
     before_install:
+    - brew update
     - brew install libsodium
     - brew install https://raw.githubusercontent.com/Homebrew/homebrew-core/0c4314c499576b28e4c082b591228a8f940954c0/Formula/clang-format.rb
     - brew install homebrew/science/m4ri
